Bug #693 Group Profile Spacing Fix

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -2952,7 +2952,7 @@ div.gform_wrapper .gform_footer {
 /* Club Profile
 ------------------------------------------------------------ */
 #club-header {
-    margin: 23px 0 15px;
+    margin: 0px 0 15px;
 }
 
 #club-header-avatar {
@@ -3806,7 +3806,7 @@ background-position: -176px -256px;
 }
 
 /* Single Course */
-.group-home #single-course-header { margin: 23px 0 15px; }*/
+.group-home #single-course-header { margin: 0px 0 15px; }
 #single-course-header h1.title { font-size: 14px; line-height: 14px; padding: 0 0 10px; margin: 0 0 10px 0; border-bottom: 1px solid #242424; font-weight: normal; color: #666 }
 #single-course-header .header-image { margin: 0 0 10px; }
 #single-course-header h2.course-title { font-size:  24px; font-family: Arial; font-weight: bold; line-height: 24px; font-weight: bold; letter-spacing: 1px; margin: 0; padding: 0; }
